# raytracer-from-scratch

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
res/: scene.json
src/: CMakeLists.txt  constants.hpp  main.cpp
src/Camera/: Camera.cpp  Camera.hpp
src/Light/: Light.hpp  LightSource.cpp  LightSource.hpp
src/Light/AmbientLight/: AmbientLight.cpp  AmbientLight.hpp
src/Light/DirectionalLight/: DirectionalLight.cpp  DirectionalLight.hpp
src/Light/PointLight/: PointLight.cpp  PointLight.hpp
src/Object/: Object.cpp  Object.hpp  Objects.hpp  Sphere.cpp  Sphere.hpp
src/Object/Parallelepiped/: Parallelepiped.cpp  Parallelepiped.hpp
src/Object/Plane/: Plane.cpp  Plane.hpp
src/Object/Polygon/: Polygon.cpp  Polygon.hpp
src/Object/Sphere/: Sphere.cpp  Sphere.hpp
src/Object/Triangle/: Triangle.cpp  Triangle.hpp
src/Renderer/: Renderer.cpp  Renderer.hpp
src/Renderer/SDLRenderer/: SDLRenderer.cpp  SDLRenderer.hpp
src/Renderer/TerminalRenderer/: TerminalRenderer.cpp  TerminalRenderer.hpp  ansi_codes.hpp
src/Renderer/Window/: Window.cpp  Window.hpp
src/Scene/: Scene.cpp  Scene.hpp
src/Sphere/: Sphere.cpp  Sphere.hpp
src/Window/: Window.cpp  Window.hpp
src/utils/: clamp_at_zero.hpp  exceptions.hpp  in_range.hpp  lerp.hpp  quadratic.hpp  reflect_ray.hpp  roughly_equal_to.hpp  smallest_positive_in_container.hpp  solve_quadratic.hpp  to_radians.hpp  vec.hpp
src/utils/Argparser/: Argparser.cpp  Argparser.hpp
src/utils/color/: color.cpp  color.hpp
src/utils/get_terminal_size/: get_terminal_size.cpp  get_terminal_size.hpp
src/utils/mat/: mat.hpp
src/utils/vec/: vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
